# earthranger-smart-utils

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  LICENSE  README.md  USAGE.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
changelog/: index.html
cli-reference/choices/: index.html
cli-reference/config-template/: index.html
cli-reference/datamodel/: index.html
cli-reference/events/: index.html
cli-reference/inspect-datamodel/: index.html
cli-reference/list-cas/: index.html
cli-reference/overview/: index.html
cli-reference/patrols/: index.html
cli-reference/validate-config/: index.html
concepts/ca-identifier/: index.html
concepts/choices/: index.html
concepts/event-type-version/: index.html
docs/: changelog.md  index.md  troubleshooting.md
docs/cli-reference/: choices.md  config-template.md  datamodel.md  events.md  inspect-datamodel.md  list-cas.md  overview.md  patrols.md  validate-config.md
docs/concepts/: ca-identifier.md  choices.md  cm-variants.md  event-type-version.md
docs/getting-started/: config.md  first-run.md  install.md
docs/images/: README.md
docs/workflows/: inspect-datamodel.md  populate-choices.md  push-datamodel.md  sync-events.md  sync-patrols.md
getting-started/config/: index.html
getting-started/first-run/: index.html
getting-started/install/: index.html
search/: search_index.json
tests/: conftest.py  test_choices.py  test_cli.py  test_config.py  test_smart_to_er.py  test_smart_to_er_v2.py  test_synchronizer.py  test_utils.py
troubleshooting/: index.html
(+29 files in other folders)
